# L20

./: CMakeLists.txt  README.md  calc.cpp  calc.h  calc.ui  main.cpp
math/include/: dmath.hpp  smath.hpp
math/src/dynamic/: CMakeLists.txt  factorial.cpp  logarithm.cpp
math/src/static/: CMakeLists.txt  add.cpp  divide.cpp  mult.cpp  sub.cpp
